# gsh_shell

./: CMakeLists.txt  README  main.c
gsh/: CMakeLists.txt  command.c  command.h  exec.c  exec.h  exec_internal.c  exec_internal.h  gsh.c  gsh.h
src/: CMakeLists.txt
src/gsh/: command.c  command.h  exec.c  exec.h  gsh.c
ut/: CMakeLists.txt  exec_test.cpp  module_test.cpp
ut/mocks/: exec_mocks.cpp
